--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,13 @@
 	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/opennlp/opennlp-maxent-3.0.2-incubating.jar"/>
 	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/opennlp/opennlp-tools-1.5.2-incubating.jar"/>
 	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/opennlp/opennlp-uima-1.5.2-incubating.jar"/>
+	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/apachecommon/commons-collections-3.2.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/apachecommon/commons-collections-3.2.1-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/apachecommon/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/apachecommon/commons-math3-3.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/apachecommon/commons-math3-3.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/apachecommon/commons-math3-3.0.jar"/>
+	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/apachecommon/commons-net-3.1-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/apachecommon/commons-net-3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
