--- a/.classpath
+++ b/.classpath
@@ -2,17 +2,17 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/opennlp/jwnl-1.3.3.jar"/>
-	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/opennlp/opennlp-maxent-3.0.2-incubating.jar"/>
-	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/opennlp/opennlp-tools-1.5.2-incubating.jar"/>
-	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/opennlp/opennlp-uima-1.5.2-incubating.jar"/>
-	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/apachecommon/commons-collections-3.2.1-javadoc.jar"/>
-	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/apachecommon/commons-collections-3.2.1-sources.jar"/>
-	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/apachecommon/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/apachecommon/commons-math3-3.0-javadoc.jar"/>
-	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/apachecommon/commons-math3-3.0-sources.jar"/>
-	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/apachecommon/commons-math3-3.0.jar"/>
-	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/apachecommon/commons-net-3.1-sources.jar"/>
-	<classpathentry kind="lib" path="/Users/snz5pal/Documents/pastwork/Projects/EclipseProject/workspace/libraries/apachecommon/commons-net-3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/haojianjin/Documents/GitHub/NLP_Toolkit/libraries/apachecommon/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/haojianjin/Documents/GitHub/NLP_Toolkit/libraries/apachecommon/commons-collections-3.2.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/haojianjin/Documents/GitHub/NLP_Toolkit/libraries/apachecommon/commons-collections-3.2.1-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/haojianjin/Documents/GitHub/NLP_Toolkit/libraries/apachecommon/commons-math3-3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/haojianjin/Documents/GitHub/NLP_Toolkit/libraries/apachecommon/commons-math3-3.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/haojianjin/Documents/GitHub/NLP_Toolkit/libraries/apachecommon/commons-math3-3.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/haojianjin/Documents/GitHub/NLP_Toolkit/libraries/apachecommon/commons-net-3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/haojianjin/Documents/GitHub/NLP_Toolkit/libraries/apachecommon/commons-net-3.1-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/haojianjin/Documents/GitHub/NLP_Toolkit/libraries/opennlp/jwnl-1.3.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/haojianjin/Documents/GitHub/NLP_Toolkit/libraries/opennlp/opennlp-maxent-3.0.2-incubating.jar"/>
+	<classpathentry kind="lib" path="C:/Users/haojianjin/Documents/GitHub/NLP_Toolkit/libraries/opennlp/opennlp-tools-1.5.2-incubating.jar"/>
+	<classpathentry kind="lib" path="C:/Users/haojianjin/Documents/GitHub/NLP_Toolkit/libraries/opennlp/opennlp-uima-1.5.2-incubating.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
